month-picker styling

--- a/demo/components/month-picker/month-picker.component.html
+++ b/demo/components/month-picker/month-picker.component.html
@@ -1,4 +1,5 @@
 <vcl-month-picker
+  id="myStyledMonthPicker"
   [prevYearAvailable]="true"
   [nextYearAvailable]="true"
   [colors]="['#50E3C2', '#FF3CE6']">
