--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -77,59 +77,42 @@ header
 code.hljs
   white-space: inherit
 
+// Month Picker
+.vclDatePicker
+  width: 18em
+  .vclButton:nth-of-type(3)
+    margin-left: auto
 
+#myStyledMonthPicker
+  .vclCalendar.vclCalInput .vclCalItem:hover
+    color: var(--calendar-item-hover-color) !important
+    background-color: var(--calendar-item-hover-bg-color) !important
 
-.vclMonthPicker
-  max-width: 24em
+  .vclCalItem.vclToday,
+  .vclCalendar.vclCalInput .vclCalItem.vclToday:hover
+    font-weight: 500
+    color: inherit
 
+  .vclCalItem.vclOtherMonth,
+  .vclCalendar.vclCalInput .vclCalItem.vclOtherMonth:hover
+    color: inherit
 
+  .vclCalItem.vclSelected,
+  .vclCalendar.vclCalInput .vclCalItem.vclSelected:hover
+    color: var(--calendar-selected-item-color) !important
+    background-color: var(--calendar-selected-item-bg-color)
+    font-weight: 500
 
+  .vclCalItem.vclDisabled,
+  .vclCalendar.vclCalInput .vclCalItem.vclDisabled:hover
+    color: var(--calendar-disabled-item-color) !important
+    background-color: var(--calendar-disabled-item-bg-color) !important
 
-  // .vclCalItem
-  //   &.vclAvailable,
-  //   &.vclUnavailable,
-  //   &.vclDisabled,
-  //   &.vclAvailable:hover,
-  //   &.vclUnavailable:hover,
-  //   &.vclDisabled:hover
-  //   &.vclToday,
-  //   &.vclToday:hover,
-  //   &.vclOtherMonth,
-  //   &.vclOtherMonth:hover
-  //     background-color: transparent
-  //     color: inherit
+  .vclCalItem.vclAvailable,
+  .vclCalendar.vclCalInput .vclCalItem.vclAvailable:hover
+    background-color: transparent
 
-
-
-
-// .vclCalItem.vclOtherMonth,
-// .vclCalItem.vclOtherMonth:hover
-//   color: var(--calendar-otherm-day-color)
-
-// .vclCalItem.vclToday,
-// .vclCalItem.vclToday:hover
-//   font-weight: 500
-//   color: var(--calendar-item-today-color)
-
-// .vclCalItem.vclAvailable,
-// .vclCalItem.vclAvailable:hover
-//   background-color: transparent
-
-// .vclCalItem.vclUnavailable,
-// .vclCalItem.vclUnavailable:hover
-//   background-color: transparent
-
-// .vclCalItem:hover
-//   color: var(--calendar-item-hover-color)
-//   background-color: var(--calendar-item-hover-bg-color)
-
-// .vclCalItem.vclSelected,
-// .vclCalItem.vclSelected:hover
-//   color: var(--calendar-selected-item-color)
-//   background-color: var(--calendar-selected-item-bg-color)
-//   font-weight: 500
-
-// .vclCalItem.vclDisabled,
-// .vclCalItem.vclDisabled:hover
-//   color: var(--calendar-disabled-item-color)
-//   background-color: transparent
+  .vclCalItem.vclUnavailable,
+  .vclCalendar.vclCalInput .vclCalItem.vclUnavailable:hover
+    background-color: transparent
+  // Month Picker
