month-picker styling

--- a/demo/styles/demo.styl
+++ b/demo/styles/demo.styl
@@ -97,8 +97,8 @@ code.hljs
   .vclCalendar.vclCalInput .vclCalItem.vclOtherMonth:hover
     color: inherit
 
-  .vclCalItem.vclSelected,
-  .vclCalendar.vclCalInput .vclCalItem.vclSelected:hover
+  .vclCalItem.vclAvailable.vclSelected,
+  .vclCalendar.vclCalInput .vclCalItem.vclAvailable.vclSelected:hover
     color: var(--calendar-selected-item-color) !important
     background-color: var(--calendar-selected-item-bg-color)
     font-weight: 500
