Added getMonth method to month-picker

--- a/demo/app.css
+++ b/demo/app.css
@@ -1266,6 +1266,7 @@ span.vclButton[disabled] {
   -webkit-transition: color .25s linear, background-color .25s ease-in-out, border-color .25s ease-in-out;
   transition: color .25s linear, background-color .25s ease-in-out, border-color .25s ease-in-out;
   min-height: 2.5em;
+  outline: 0;
 }
 
 .vclCalendar.vclCalInput {
@@ -1273,6 +1274,7 @@ span.vclButton[disabled] {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  outline: 0;
 }
 
 .vclCalendar.vclCalInput .vclCalItem:hover {
@@ -1291,17 +1293,11 @@ span.vclButton[disabled] {
   color: hsl(0, 0%, 63%);
 }
 
-.vclCalItem.vclSelected,
-.vclCalendar.vclCalInput .vclCalItem.vclSelected:hover {
-  color: #FFFFFF;
-  background-color: #0888BF;
-  font-weight: 500;
-}
-
 .vclCalItem.vclDisabled,
 .vclCalendar.vclCalInput .vclCalItem.vclDisabled:hover {
   color: hsl(0, 0%, 50%);
   background-color: hsl(0, 0%, 88%);
+  cursor: default;
 }
 
 .vclCalItem.vclAvailable,
@@ -1312,6 +1308,13 @@ span.vclButton[disabled] {
 .vclCalItem.vclUnavailable,
 .vclCalendar.vclCalInput .vclCalItem.vclUnavailable:hover {
   background-color: #f2dede;
+}
+
+.vclCalItem.vclSelected,
+.vclCalendar.vclCalInput .vclCalItem.vclSelected:hover {
+  color: #FFFFFF;
+  background-color: #0888BF;
+  font-weight: 500;
 }
 
 .vclCheckbox {
@@ -8980,22 +8983,17 @@ code.hljs {
   white-space: inherit;
 }
 
-.vclDatePicker {
-  width: 18em;
-}
-
 .vclDatePicker .vclButton:nth-of-type(3) {
   margin-left: auto;
 }
 
-#myStyledMonthPicker .vclCalendar.vclCalInput .vclCalItem:hover {
+#myStyledMonthPicker .vclCalendar.vclCalInput .vclCalItem:hover:not(.vclSelected) {
   color: hsl(0, 0%, 20%) !important;
   background-color: hsl(0, 0%, 92%) !important;
 }
 
 #myStyledMonthPicker .vclCalItem.vclToday,
 #myStyledMonthPicker .vclCalendar.vclCalInput .vclCalItem.vclToday:hover {
-  font-weight: 500;
   color: inherit;
 }
 
@@ -9008,7 +9006,6 @@ code.hljs {
 #myStyledMonthPicker .vclCalendar.vclCalInput .vclCalItem.vclAvailable.vclSelected:hover {
   color: #FFFFFF !important;
   background-color: #0888BF;
-  font-weight: 500;
 }
 
 #myStyledMonthPicker .vclCalItem.vclDisabled,
