--- a/styles/app.css
+++ b/styles/app.css
@@ -8980,22 +8980,17 @@ code.hljs {
   white-space: inherit;
 }
 
-.vclDatePicker {
-  width: 18em;
-}
-
 .vclDatePicker .vclButton:nth-of-type(3) {
   margin-left: auto;
 }
 
-#myStyledMonthPicker .vclCalendar.vclCalInput .vclCalItem:hover {
+#myStyledMonthPicker .vclCalendar.vclCalInput .vclCalItem:hover:not(.vclSelected) {
   color: hsl(0, 0%, 20%) !important;
   background-color: hsl(0, 0%, 92%) !important;
 }
 
 #myStyledMonthPicker .vclCalItem.vclToday,
 #myStyledMonthPicker .vclCalendar.vclCalInput .vclCalItem.vclToday:hover {
-  font-weight: 500;
   color: inherit;
 }
 
@@ -9008,7 +9003,6 @@ code.hljs {
 #myStyledMonthPicker .vclCalendar.vclCalInput .vclCalItem.vclAvailable.vclSelected:hover {
   color: #FFFFFF !important;
   background-color: #0888BF;
-  font-weight: 500;
 }
 
 #myStyledMonthPicker .vclCalItem.vclDisabled,
