--- a/demo/components/link/link.component.html
+++ b/demo/components/link/link.component.html
@@ -44,11 +44,10 @@ Link with target _blank:
   [label]="'Target _blank link'"></a>
 <br><br>
 
-Link with title, additional class and scheme:
+Link with title and scheme:
 <br>
 <a vcl-link
   [title]="'link title'"
-  [class]="'additionalClass'"
   [scheme]="'tel'"
   [href]="'004971122222222'"
   [label]="'I\'m a telephone number schemed link'"></a>
