--- a/demo/components/tab-nav/tab-nav.component.html
+++ b/demo/components/tab-nav/tab-nav.component.html
@@ -58,3 +58,29 @@
     <template vcl-tab-content>Content2</template>
   </vcl-tab>
 </vcl-tab-nav>
+
+
+<h3>With borders=true</h3>
+
+<vcl-tab-nav borders=true>
+  <vcl-tab>
+    <template vcl-tab-label>Tab1</template>
+    <template vcl-tab-content>Content1</template>
+  </vcl-tab>
+  <vcl-tab>
+    <template vcl-tab-label>Tab2</template>
+    <template vcl-tab-content>Content2</template>
+  </vcl-tab>
+</vcl-tab-nav>
+
+<h3>Shared content template</h3>
+
+<vcl-tab-nav [(selectedTabIndex)]="tabIndex">
+  <vcl-tab>
+    <template vcl-tab-label>Tab1</template>
+  </vcl-tab>
+  <vcl-tab>
+    <template vcl-tab-label>Tab2</template>
+  </vcl-tab>
+  <template vcl-tab-content>Shared Content Tab: {{tabIndex}}</template>
+</vcl-tab-nav>
