Commented out unfinished/unused code, sorry about that

--- a/demo/components/month-selector/month-selector.component.html
+++ b/demo/components/month-selector/month-selector.component.html
@@ -1,4 +1,4 @@
-<vcl-month-selector
+<!--<vcl-month-selector
   id="myStyledMonthPicker"
   [prevYearAvailable]="true"
   [nextYearAvailable]="true"
@@ -30,4 +30,4 @@
     (nextYearBtnTap)="onNextYearTap()"
     [nextYearAvailable]="nextYearAvailable">
   </vcl-month-selector>
-</vcl-popover>
+</vcl-popover>-->
