Passed selectItem from metalist to dropdown to select

--- a/demo/components/select/select.component.html
+++ b/demo/components/select/select.component.html
@@ -1,5 +1,5 @@
 <b>Single select</b><br>
-<vcl-select [items]="items" (select)="onSelect($event)"></vcl-select>
+<vcl-select #select [items]="items" (select)="onSelect($event)"></vcl-select>
 <div *ngIf="selectedItemSingle">
   Selected: {{selectedItemSingle.label}}
 </div>
