ADD form: layout

--- a/src/components/form/form.component.html
+++ b/src/components/form/form.component.html
@@ -1,3 +1,5 @@
-<form class="vclForm vclFormInline">
+<form class="vclForm vclFormInline"
+ [class.vclFormInline]="layout=='inline'"
+ [class.vclFormHorizontal]="layout=='horizontal'">
   <ng-content></ng-content>
 </form>
