ADD events to form

--- a/src/components/form/form.component.html
+++ b/src/components/form/form.component.html
@@ -1,5 +1,8 @@
-<form class="vclForm vclFormInline"
+<form  #form="ngForm" class="vclForm"
  [class.vclFormInline]="layout=='inline'"
- [class.vclFormHorizontal]="layout=='horizontal'">
+ [class.vclFormHorizontal]="layout=='horizontal'"
+
+ (ngSubmit)="ngSubmit(form)"
+>
   <ng-content></ng-content>
 </form>
