ADD value accessor to radio-button; ADD radio-button to example-form

--- a/demo/components/form/form.component.html
+++ b/demo/components/form/form.component.html
@@ -3,6 +3,11 @@
 
   <vcl-select ngModel name="itemselect" [items]="items"></vcl-select>
 
+<br/><br/>
+Radio: <br/>
+<vcl-radio-button ngModel name="myradio"></vcl-radio-button>
+
+
   <br/>
   <br/> Input me:
   <input vcl-input ngModel name="myname" required pattern=".{5,10}">
