ADD ControlValueAccessor to dropdown

--- a/demo/components/form/form.component.html
+++ b/demo/components/form/form.component.html
@@ -3,9 +3,13 @@
 
   <vcl-select ngModel name="itemselect" [items]="items"></vcl-select>
 
-<br/><br/>
-Radio: <br/>
-<vcl-radio-button ngModel name="myradio"></vcl-radio-button>
+  <br/><br/> Radio: <br/>
+  <vcl-radio-button ngModel name="myradio"></vcl-radio-button>
+
+  <br/><br/> Dropdown: <br/>
+  <vcl-dropdown [items]="items" [maxSelectableItems]="1" [expanded]="true"
+ ngModel name="mydropdown"
+  ></vcl-dropdown>
 
 
   <br/>
