ADD ValueAccessor to Checkbox

--- a/demo/components/form/form.component.html
+++ b/demo/components/form/form.component.html
@@ -7,9 +7,11 @@
   <vcl-radio-button ngModel name="myradio"></vcl-radio-button>
 
   <br/><br/> Dropdown: <br/>
-  <vcl-dropdown [items]="items" [maxSelectableItems]="1" [expanded]="true"
- ngModel name="mydropdown"
-  ></vcl-dropdown>
+  <vcl-dropdown [items]="items" [maxSelectableItems]="1" [expanded]="true" ngModel name="mydropdown"></vcl-dropdown>
+
+
+  <br/><br/> Checkbox: <br/>
+  <vcl-checkbox [checked]="false" ngModel name="mycheckbox"></vcl-checkbox>
 
 
   <br/>
