ADD clickable label for radio-button

--- a/demo/components/form/form.component.html
+++ b/demo/components/form/form.component.html
@@ -4,14 +4,14 @@
   <vcl-select ngModel name="itemselect" [items]="items"></vcl-select>
 
   <br/><br/> Radio: <br/>
-  <vcl-radio-button ngModel name="myradio"></vcl-radio-button>
+  <vcl-radio-button ngModel name="myradio">Radio me</vcl-radio-button>
 
   <br/><br/> Dropdown: <br/>
   <vcl-dropdown [items]="items" [maxSelectableItems]="1" [expanded]="true" ngModel name="mydropdown"></vcl-dropdown>
 
 
   <br/><br/> Checkbox: <br/>
-  <vcl-checkbox [checked]="false" ngModel name="mycheckbox"></vcl-checkbox>
+  <vcl-checkbox [checked]="false" ngModel name="mycheckbox">Check me</vcl-checkbox>
 
 
   <br/>
@@ -39,14 +39,14 @@
   <vcl-select formControlName="itemselect" [items]="items"></vcl-select>
 
   <br/><br/> Radio: <br/>
-  <vcl-radio-button formControlName="myradio"></vcl-radio-button>
+  <vcl-radio-button formControlName="myradio">Radio me</vcl-radio-button>
 
   <br/><br/> Dropdown: <br/>
   <vcl-dropdown [items]="items" [maxSelectableItems]="1" [expanded]="true" formControlName="mydropdown"></vcl-dropdown>
 
 
   <br/><br/> Checkbox: <br/>
-  <vcl-checkbox [checked]="false" formControlName="mycheckbox"></vcl-checkbox>
+  <vcl-checkbox [checked]="false" formControlName="mycheckbox">Check me</vcl-checkbox>
 
 
   <br/>
