--- a/demo/components/radio-button/radio-button.component.html
+++ b/demo/components/radio-button/radio-button.component.html
@@ -10,3 +10,13 @@ Checkable:
 <br><br>
 Disabled:
 <vcl-radio-button [disabled]="true"></vcl-radio-button>
+
+<br>
+<br>
+<br>
+Radio-Button with label:
+<br>
+<vcl-radio-button [(checked)]="isChecked2" labelPosition="right">rightLabel</vcl-radio-button>
+<br>
+<br>
+<vcl-radio-button [(checked)]="isChecked2" labelPosition="left">leftLabel</vcl-radio-button>
