--- a/src/components/flip-switch/flip-switch.component.html
+++ b/src/components/flip-switch/flip-switch.component.html
@@ -1,4 +1,4 @@
-<div class="vclFlipSwitch vclFlipSwitchPressed" touch-action="pan-y" role="button" tabindex="0" aria-pressed="true" aria-labelledby="fs-label-0">
+<div class="vclFlipSwitch" [class.vclFlipSwitchPressed]="value" touch-action="pan-y" role="button" tabindex="0" aria-pressed="true" aria-labelledby="fs-label-0" (click)="onClick()">
   <label class="vclFlipSwitchLabel" id="fs-label-0">
     <div class="vclFlipSwitchTrack">
       <div class="vclFlipSwitchActive" aria-hidden="false">{{onLabel}}</div>
